fixing homepage img on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
 }
 
 .homePage img {
-  height: 100%;
+  max-height: 100%;
   width: auto;
   max-width: 100%;
 }
